displaying of basic math  bug with to many decimal Places overflowing display

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     width:80%;
     background-color: lightgray;
     margin:auto;
+    text-align: right;
 }
 #butts{
     padding-top:10px;
